[gd_scene load_steps=11 format=2]

[ext_resource path="res://RayArrayCopiedCode/text2image_B9875288_20220811_003755-2.png.png" type="Texture" id=1]
[ext_resource path="res://RayArrayCopiedCode/text2image_B9875288_20220811_003755-1.png.png" type="Texture" id=2]
[ext_resource path="res://Resources/Death.png" type="Texture" id=3]
[ext_resource path="res://RayArrayCopiedCode/Options Godot.png" type="Texture" id=4]
[ext_resource path="res://RayArrayCopiedCode/text2image_P4667887_20210920_451-1.png.png" type="Texture" id=5]
[ext_resource path="res://RayArrayCopiedCode/Options Godot-1.png.png" type="Texture" id=6]
[ext_resource path="res://RayArrayCopiedCode/YouDied.gd" type="Script" id=7]
[ext_resource path="res://RayArrayCopiedCode/Level Select Godot.png" type="Texture" id=8]
[ext_resource path="res://RayArrayCopiedCode/Retry-1.png.png" type="Texture" id=9]
[ext_resource path="res://RayArrayCopiedCode/Retry.png" type="Texture" id=10]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="Container" type="CenterContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Container"]
margin_left = 285.0
margin_top = 169.0
margin_right = 755.0
margin_bottom = 391.0
custom_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Container/VBoxContainer"]
margin_right = 470.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Container/VBoxContainer/HBoxContainer"]
margin_bottom = 60.0

[node name="Title" type="TextureRect" parent="MarginContainer/Container/VBoxContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 460.0
margin_bottom = 60.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Container/VBoxContainer/HBoxContainer"]
margin_left = 470.0
margin_right = 470.0
margin_bottom = 60.0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Container/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 30.0
margin_bottom = 30.0

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/Container/VBoxContainer"]
margin_top = 90.0
margin_right = 470.0
margin_bottom = 222.0

[node name="CenterResume" type="CenterContainer" parent="MarginContainer/Container/VBoxContainer/MenuOptions"]
margin_right = 470.0
margin_bottom = 30.0

[node name="Retry" type="TextureButton" parent="MarginContainer/Container/VBoxContainer/MenuOptions/CenterResume"]
margin_left = 170.0
margin_right = 300.0
margin_bottom = 30.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="CenterLevelSelect" type="CenterContainer" parent="MarginContainer/Container/VBoxContainer/MenuOptions"]
margin_top = 34.0
margin_right = 470.0
margin_bottom = 64.0

[node name="LevelSelect" type="TextureButton" parent="MarginContainer/Container/VBoxContainer/MenuOptions/CenterLevelSelect"]
margin_left = 166.0
margin_right = 304.0
margin_bottom = 30.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 5 )

[node name="CenterOptions" type="CenterContainer" parent="MarginContainer/Container/VBoxContainer/MenuOptions"]
margin_top = 68.0
margin_right = 470.0
margin_bottom = 98.0

[node name="Button" type="TextureButton" parent="MarginContainer/Container/VBoxContainer/MenuOptions/CenterOptions"]
margin_left = 187.0
margin_right = 282.0
margin_bottom = 30.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="Quit" type="CenterContainer" parent="MarginContainer/Container/VBoxContainer/MenuOptions"]
margin_top = 102.0
margin_right = 470.0
margin_bottom = 132.0

[node name="Button" type="TextureButton" parent="MarginContainer/Container/VBoxContainer/MenuOptions/Quit"]
margin_left = 205.0
margin_right = 265.0
margin_bottom = 30.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/MenuOptions/CenterResume/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/MenuOptions/CenterLevelSelect/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/MenuOptions/CenterOptions/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/MenuOptions/Quit/Button" to="." method="_on_Quit_Button_pressed"]
